# notes

./: .gitignore  README.md  pyproject.toml
docs/: APPSHEET.md  CLAUDE-CODE.md  GEMINI-CLI.md  TOOLS.md
notes/: __init__.py
notes/cli/: __init__.py  __main__.py
notes/mcp/: __init__.py  server.py
notes/sdk/: __init__.py  config.py  query.py
notes/sdk/providers/: __init__.py
notes/sdk/providers/appsheet/: __init__.py  provider.py
